--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
 inc:
   # Blog Information
-  title:        "Jekyll Incorporated"
-  subtitle:     "Modern Jekyll based blog for companies"
+  title:        "ChatSecure Blog"
+  subtitle:     "It's a blog."
   cover_image:  blog-cover.jpg
   logo:         logo.png
   
   # Company information
-  company:      Incorporated
-  url:          http://sendtoinc.com/
-  facebook:     sendtoinc
-  twitter:      sendtoinc
-  gplus:        '101183822199340201470'
-  about_link:   https://sendtoinc.com/about/
+  company:      ChatSecure
+  url:          http://chatsecure.org/
+  facebook:     chatsecure
+  twitter:      chatsecure
+  gplus:        
+  about_link:   http://chatsecure.org/about
   
   # Product Information
-  product_link: http://incorporated.sendtoinc.com/
-  tagline:      "Get a modern blog for your company"
+  product_link: http://chatsecure.org/about
+  tagline:      "Get ChatSecure Now"
   
   # Comments
   disqus:
@@ -43,7 +43,7 @@ inc:
   
   # Setup your fonts, colors etc at _assets/stylesheets/main.scss
 
-url:         http://incorporated.sendtoinc.com
+url:         http://chatsecure.github.io
 source:      .
 destination: ./_site
 plugins:     ./_plugins
