Add a few more pages

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ inc:
   company:      ChatSecure
   facebook:     chatsecure
   twitter:      chatsecure
+  github:       chatsecure
   gplus:        
 
   # Comments
