--- a/_config.yml
+++ b/_config.yml
@@ -37,14 +37,14 @@ inc:
 
   # Setup your fonts, colors etc at _assets/stylesheets/main.scss
 
-url:         http://chatsecure.github.io
+url:         https://chatsecure.org
 description: Free and open source encrypted chat for iPhone and Android.
 source:      .
 destination: ./_site
 plugins:     ./_plugins
 layouts:     ./_layouts
 include:     ['.htaccess']
-exclude:     ['node_modules', 'Gemfile', 'Gemfile.lock', 'Gruntfile.js', 'LICENSE', 'package.json']
+exclude:     ['node_modules', 'Gemfile', 'Gemfile.lock', 'Gruntfile.js', 'LICENSE', 'package.json', 'deploy.sh']
 timezone:    America/Los_Angeles
 encoding:    UTF-8
 
