--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ inc:
 
   # Setup your fonts, colors etc at _assets/stylesheets/main.scss
 
-url:         https://chatsecure.org
+url:         http://chatsecure.github.io
 description: Free and open source encrypted chat for iPhone and Android.
 source:      .
 destination: ./_site
