--- a/_config.yml
+++ b/_config.yml
@@ -42,20 +42,19 @@ url:         https://chatsecure.org
 description: Free and open source encrypted chat for iPhone and Android.
 source:      .
 destination: ./_site
-plugins:     ./_plugins
-layouts:     ./_layouts
+plugins_dir:     ./_plugins
+layouts_dir:     ./_layouts
 include:     ['.htaccess']
 exclude:     ['node_modules', 'Gemfile', 'Gemfile.lock', 'Gruntfile.js', 'LICENSE', 'package.json', 'deploy.sh']
 timezone:    America/Los_Angeles
 encoding:    UTF-8
+gems: ['jekyll-paginate', 'kramdown', 'RedCloth']
 
 # Show future posts
 future:      false
 show_drafts: nil
 limit_posts: 0
 highlighter: pygments
-
-relative_permalinks: true
 
 permalink:     /:categories/:title/
 paginate_path: 'blog/page:num'
@@ -85,7 +84,7 @@ kramdown:
   entity_output: as_char
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
-  use_coderay: false
+  enable_coderay: false
 
   coderay:
     coderay_wrap: div
