Removing build warnings

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 inc:
   # Blog Information
   title:        "ChatSecure"
-  subtitle:     "Free and open source encrypted chat for iPhone and Android."
+  subtitle:     "Free and open source encrypted chat for iOS."
   cover_image:  blog-cover.jpg
   logo:         logo.png
 
@@ -39,7 +39,7 @@ inc:
   # Setup your fonts, colors etc at _assets/stylesheets/main.scss
 
 url:         https://chatsecure.org
-description: Free and open source encrypted chat for iPhone and Android.
+description: Free and open source encrypted chat for iOS.
 source:      .
 destination: ./_site
 plugins_dir:     ./_plugins
@@ -86,13 +86,13 @@ kramdown:
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
 
-  coderay:
-    coderay_wrap: div
-    coderay_line_numbers: inline
-    coderay_line_numbers_start: 1
-    coderay_tab_width: 4
-    coderay_bold_every: 10
-    coderay_css: style
+  syntax_highlighter_opts:
+    wrap: div
+    ine_numbers: inline
+    line_numbers_start: 1
+    tab_width: 4
+    bold_every: 10
+    css: style
 
 redcloth:
   hard_breaks: true
